Update 'xcm2s1rcw-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:7f7e3e79e28a67dae5ef89b0c9e099ace02fec60@sha256:8775639e8a70ea2ec03d2bee0463bc3d5c2fbca7ba4550fef6c55fdd32539fbf

--- a/components/xcm2s1rcw-go/overlays/development/deployment-patch.yaml
+++ b/components/xcm2s1rcw-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xcm2s1rcw-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:7f7e3e79e28a67dae5ef89b0c9e099ace02fec60@sha256:8775639e8a70ea2ec03d2bee0463bc3d5c2fbca7ba4550fef6c55fdd32539fbf
+          name: container-image
